                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

18/02/15 I. Hrivnacova (exampleB4-V10-00-04)
- Fixed accessing gapHit (problem report #1714)
	 
02/02/15 I. Hrivnacova
- Fixed documentation

29/11/14 I. Hrivnacova
- Use G4endl instead of \n in G4cout;
  this makes each new line in the output on threads preceded with
  G4WTN >

06/11/14 I. Hrivnacova
- Finalized modifications in previous tag 02, 03):
  - Removed G4UI_USE/G4VIS_USE tests and init.mac macro (not needed)
  - Moved G4UIExecutive at the beginning of main() in all examples
  - Perform run initialization in macros instead of main()

04/11/14 L. Garnier (exampleB4-V10-00-02 - exampleB4-V10-00-03)
- Remove old G4UI_USE/G4VIS_USE
- Move G4UIExecutive at the beginning of main()
- Fix a problem bad design when calling .mac

13/08/14 mma (exampleB4-V10-00-01)
- update README and .README again

11/08/14 mma (exampleB4-V10-00-00)
- Restaure drawing in README and .README

02 December 2013 Ivana Hrivnacova 
- Fixed gui.mac:
  corrected wireframe parameter, removed run2.mac from gui 

28/11/13 I. Hrivnacova (exampleB4-V09-06-18)
- Clean-up macros (fixed obsolete comments)

26/11/13 I. Hrivnacova (exampleB4-V09-06-17)
- Fixed deleting fMagFieldMessenger with use of G4AutoDelete utility

30/10/13 I. Hrivnacova (exampleB4-V09-06-16)
- Added a protection when /run/printProgress value is set to zero 

30/10/13 I. Hrivnacova (exampleB4-V09-06-15)
- Updated README

29/10/13 I. Hrivnacova (exampleB4-V09-06-14)
- Fixed macro (using /run/printProgress)

29/10/13 I. Hrivnacova (exampleB4-V09-06-13)
- Using G4GlobalMagFieldMessenger
- Using G4Exception for warnings and error messages